--- a/medical_analysis_clinic/MainWindow.xaml
+++ b/medical_analysis_clinic/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:medical_analysis_clinic"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="950"
+        Title="Medical App" Height="600" Width="950"
          WindowState="Normal">
     <Frame Name="MainFrame" Background="AliceBlue" NavigationUIVisibility="Hidden"></Frame>
 </Window>
