--- a/medical_analysis_clinic/Pages/AccountPage.xaml
+++ b/medical_analysis_clinic/Pages/AccountPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:medical_analysis_clinic"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
-      d:DesignHeight="588" d:DesignWidth="922"
+      d:DesignHeight="600" d:DesignWidth="922"
       Title="AccountPage">
 
     <Grid Background="MediumSpringGreen">
@@ -19,12 +19,12 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Column="1" x:Name="TopText" Text="Персональные данные" FontSize="40" HorizontalAlignment="Center"/>
-        <StackPanel Background="DarkOliveGreen">
-            <Image MouseDown="Image_MouseDown" Source="/Pages/logo.png"></Image>
+        <TextBlock TextAlignment="Center" Background="DarkOliveGreen" Grid.Column="1" x:Name="TopText" Text="Персональные данные" FontSize="40" HorizontalAlignment="Center" Width="672"/>
+        <StackPanel Background="DarkOliveGreen" Margin="0,0,0,490" Grid.RowSpan="2">
+            <Image MouseDown="Image_MouseDown" Source="/Pages/logo.png" Height="96" Width="246"></Image>
         </StackPanel>
 
-        <StackPanel Margin="0,0,0,8" Grid.Row="1">
+        <StackPanel Margin="0,10,0,-1" Grid.Row="1" Background="DarkOliveGreen">
             <Button Height="45" Click="PersonalData" Content="Личные данные"/>
             <Button Height="45" Content="Мои записи" Click="MyRecords"/>
             <Button Height="45" Content="Выйти из уч.записи" Click="ExitFromAcc" Cursor="Hand"/>
@@ -42,8 +42,8 @@
             <Button Content="Сохранить изменения" Click="SaveButton_Click"/>
         </StackPanel>
 
-        <StackPanel x:Name="MyRecordsPanel" Grid.Column="1" Margin="0,0,0,-1" Grid.Row="1" Orientation="Horizontal">
-
+        <StackPanel x:Name="MyRecordsPanel" Grid.Column="1" Margin="10,0,10,372" Grid.Row="1" Orientation="Horizontal">
+            
         </StackPanel>
     </Grid>
 </Page>
