--- a/medical_analysis_clinic/Pages/AccountPage.xaml
+++ b/medical_analysis_clinic/Pages/AccountPage.xaml
@@ -36,7 +36,7 @@
             <TextBox materialDesign:HintAssist.Hint="Почта" x:Name="EmailBox"/>
 
             <TextBox materialDesign:HintAssist.Hint="Дата рождения" x:Name="Birthday"/>
-            <TextBox materialDesign:HintAssist.Hint="СНИЛС" x:Name="SnilsBox"/>
+            <TextBox materialDesign:HintAssist.Hint="СНИЛС" MaxLength="9" x:Name="SnilsBox"/>
             <TextBox materialDesign:HintAssist.Hint="Текущий пароль" x:Name="CurrentPasBox"/>
             <TextBox materialDesign:HintAssist.Hint="Новый пароль" x:Name="NewPasBox"/>
             <Button Content="Сохранить изменения" Click="SaveButton_Click"/>
